[package]
name = "gsgdt"
description = "Generic Stringly Typed Graph Datatype"
version = "0.1.0"
authors = ["Vishnunarayan K I <appukuttancr@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/vn-ki/gsgdt-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
